prevent too wide of a container

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -14,6 +14,10 @@ p {
     color: white;
 }
 
+.container {
+    width: 80% !important;
+}
+
 .login-container {
     height: 100vh;
     background: rgb(170, 134, 243);
@@ -21,12 +25,16 @@ p {
 
 .journal-container {
     background: rgb(170, 134, 243);
-    // border: 1px solid pink;
-  
 }
 
-.entry-form-container{
+.entry-form-container {
     background: rgb(170, 134, 243);
-    border :3px solid gold;
+    border: 3px solid gold;
     border-radius: 20px;
+}
+
+.entry-container {
+    border: 3px solid gold;
+    border-radius: 20px;
+
 }
